# mailcrypt

./: .cvsignore  .gitignore  ANNOUNCE  ChangeLog  ChangeLog.1  ChangeLog.old  FSF-timer.el  INSTALL  LCD-entry  Makefile.in  NEWS  ONEWS  README  README.dev  README.gpg  configure  configure.ac  configure.in  gpgwrap.pl  gpgwrap.pl.in  load-path.hack  mailcrypt.dvi  mailcrypt.el  mailcrypt.info  mailcrypt.info-1  mailcrypt.info-2  mailcrypt.texi  mailcrypt_3.5.8+CVS.2005.04.29.1.orig.tar.gz.delta  mailcrypt_3.5.8+CVS.2005.04.29.1.orig.tar.gz.id  mailcrypt_3.5.8+CVS.2010.02.13.orig.tar.gz.delta  mailcrypt_3.5.8+CVS.2010.02.13.orig.tar.gz.id  mailcrypt_3.5.8+CVS.2010.02.14.orig.tar.gz.delta  mailcrypt_3.5.8+CVS.2010.03.08.orig.tar.gz.delta  mailcrypt_3.5.8+CVS.2010.03.08.orig.tar.gz.id  mailcrypt_3.5.8.orig.tar.gz.delta  mailcrypt_3.5.8.orig.tar.gz.id  mailcrypt_3.5.9.orig.tar.gz.delta  mailcrypt_3.5.9.orig.tar.gz.id  mc-gpg.el  mc-pgp.el  (+11 more)
debian/: .cvsignore  .gitignore  =TODO  COPYRIGHT  README.Debian  README.in  bug.presubj.in  bug.script.in  changelog  changelog~  config.in  control  copyright.in  docbase.in  install.in  lintian.in  mailcrypt-init.el  postinst.in  postrm.in  preinst.in  prerm.in  remove.in  rules  rules.in  source.lintian-overrides  system.variables  templates  templates.in  variables  watch
debian/po/: br.po  cs.po  da.po  de.po  es.po  fi.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  ru.po  sv.po  templates.pot  vi.po
debian/upstream/: metadata
tests/: Makefile.in  make_gpg_testcases.py  test-gpg.el
tests/gpg-keys/: Makefile  fix-trust.py  make-rings.py
tests/gpg-testcases/: CS.latin1.s1v  CS.s1v  CS.s2v  CS.s3v  CS.s4  E.e1r  E.e1re3re4r  E.e2r  E.e3  E.e4  E.latin1.e1r  ES.e1r.s1v  ES.e1r.s2v  ES.e1r.s3v  ES.e1r.s4  ES.e3.s1v  ES.e4.s1v  S.s1v  S.s2v  S.s3v  S.s4
tests/remailer/: .cvsignore  Makefile.in  dnotify.py  fakemix.sh  gtkwatcher.glade  gtkwatcher.gladep  gtkwatcher.py  maildir.py  maildirgtk.py  maildirtwisted.py  test-remailer.el  test-remailer3.el  unwind.py  watcher.py
