dnl Process this file with autoconf to produce a configure script.
AC_INIT(mailcrypt.el)

AC_PROG_INSTALL()

AC_CHECK_PROGS(EMACS, emacs xemacs)
if test "$EMACS" = xemacs
then
  if $EMACS -batch -q --vanilla
  then
    EMACSFLAGS="--vanilla"         # We're running Xemacs 20.x or higher
    AC_SUBST(EMACSFLAGS)
  else
    EMACSFLAGS="-q -no-site-file"  # Still running Xemacs 19.x
  fi
else if test "$EMACS" = emacs
then
  EMACSFLAGS=""
  AC_SUBST(EMACSFLAGS)
else
  AC_MSG_ERROR(Cannot find emacs in your path.
Hint: Try setting EMACS environment variable or fixing your PATH.)
fi
fi

EXTRA_SRCS=""
EXTRA_OBJS=""
echo -n checking for timer.el...
if $EMACS -batch -l timer 2>/dev/null
then
  echo timer.el
else
  echo no.  I will install it for you.
  EXTRA_SRCS="timer.el"
  AC_SUBST(EXTRA_SRCS)
  EXTRA_OBJS="timer.elc"
  AC_SUBST(EXTRA_OBJS)
fi

AC_OUTPUT(Makefile)
